log
Fri Apr 22 11:28:33 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:23: error: 'lower_than_int' undeclared (first use in this function)
     new->lower_than = lower_than_int;
                       ^~~~~~~~~~~~~~
treemap.c:42:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
da4f12b
Fri Apr 22 11:28:43 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
bd6eaf0
Fri Apr 22 11:29:06 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
b423bcb
Fri Apr 22 11:41:16 HSP 2022: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
48ae8bc
Fri Apr 22 11:42:15 HSP 2022: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 5/70
50b1e1a
Fri Apr 22 11:43:11 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
8c58c4e
Fri Apr 22 11:44:51 HSP 2022: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
749b1a7
Fri Apr 22 11:54:13 HSP 2022: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:56:23: error: 'return' with a value, in function returning void [-Werror]
         return auxNode->pair;
                ~~~~~~~^~~~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cbce9f2
Fri Apr 22 11:55:04 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
6a78b99
Fri Apr 22 12:04:14 HSP 2022: 
 treemap.c | 20 +++++++++++---------
 1 file changed, 11 insertions(+), 9 deletions(-)
 tests:  15|4
total_score: 25/70
14e9f70
Fri Apr 22 12:04:36 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  15|4
total_score: 25/70
f15fe66
Fri Apr 22 12:05:14 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  15|4
total_score: 25/70
1406381
Fri Apr 22 12:10:33 HSP 2022: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  15|4
total_score: 25/70
4861b89
Fri Apr 22 12:14:45 HSP 2022: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
c5ae64c
Fri Apr 22 12:15:15 HSP 2022: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  16|4
total_score: 30/70
1fbac5b
Fri Apr 22 12:16:54 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  16|4
total_score: 30/70
3b0087d
Fri Apr 22 15:56:33 HSP 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
aba0c41
Fri Apr 22 16:05:47 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  16|4
total_score: 30/70
866492a
Fri Apr 22 16:07:56 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
919bf87
Fri Apr 22 16:11:57 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  16|4
total_score: 30/70
233418d
Fri Apr 22 16:25:23 HSP 2022: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  16|4
total_score: 30/70
052e698
Fri Apr 22 16:26:02 HSP 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
050f8e3
Fri Apr 22 16:27:35 HSP 2022: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  18|3
total_score: 40/70
59e326c
Fri Apr 22 16:30:03 HSP 2022: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
d782dc7
Fri Apr 22 16:30:46 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  20|2
total_score: 45/70
3da9637
Fri Apr 22 16:32:08 HSP 2022: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  20|2
total_score: 45/70
d98cb19
Fri Apr 22 16:35:23 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  20|2
total_score: 45/70
0655d4c
Fri Apr 22 16:36:50 HSP 2022: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  20|2
total_score: 45/70
0fe22f9
Fri Apr 22 17:00:11 HSP 2022: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  21|2
total_score: 50/70
292ddc9
Fri Apr 22 17:11:34 HSP 2022: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
9134e01
Fri Apr 22 17:16:10 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
ac75ad4
Fri Apr 22 17:27:38 HSP 2022: 
 treemap.c | 27 ++++++++++++++++++---------
 1 file changed, 18 insertions(+), 9 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:220:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         auxBusq = tree->lower_than(tree->current, nextAux);
                 ^
treemap.c:223:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             return nextAux;
                    ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fe3f34d
Fri Apr 22 17:27:51 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:220:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         auxBusq = tree->lower_than(tree->current, nextAux);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cb3deb8
Fri Apr 22 17:28:12 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|0
   [OK] next retorna nodo 6980
85761cd
Fri Apr 22 17:29:27 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5569ba9
Fri Apr 22 17:30:21 HSP 2022: 
 treemap.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:216:9: error: unused variable 'auxBusq' [-Werror=unused-variable]
     int auxBusq;
         ^~~~~~~
treemap.c:215:15: error: unused variable 'nextAux' [-Werror=unused-variable]
     TreeNode *nextAux = tree->current->parent;
               ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b676f07
Fri Apr 22 17:30:32 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
a7d4faa
Fri Apr 22 17:40:37 HSP 2022: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  23|2
total_score: 50/70
dc2098a
Fri Apr 22 17:41:25 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
e56597e
Fri Apr 22 17:48:29 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
02050c1
Sun Apr 24 19:18:52 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  23|2
total_score: 50/70
8086cae
Sun Apr 24 19:26:45 HSP 2022: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  23|2
total_score: 50/70
f112dc5
Sun Apr 24 19:32:01 HSP 2022: 
 treemap.c | 31 ++++---------------------------
 1 file changed, 4 insertions(+), 27 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:210:17: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         nextAux = minimum(tree->current->right);
                 ^
treemap.c:211:23: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         tree->current = nextAux;
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
8bc177f
Sun Apr 24 19:33:05 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
85c7089
Sun Apr 24 19:33:39 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
d634bb5
Sun Apr 24 20:01:04 HSP 2022: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:218:9: error: this 'while' clause does not guard... [-Werror=misleading-indentation]
         while(nextAux != NULL && tree->lower_than(nextAux->pair->key, tree->current->pair->key))
         ^~~~~
treemap.c:220:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'while'
             tree->current = nextAux;
             ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3b8bff8
Sun Apr 24 20:02:06 HSP 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
1c83a3a
Sun Apr 24 20:02:25 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
598739d
Sun Apr 24 20:02:56 HSP 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
a56e9a5
Sun Apr 24 20:03:24 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
4ae3ae8
